tests/ui/once_result_no_return.stderr
error: function must return something when `result` or `option` is set
 --> tests/ui/once_result_no_return.rs:3:1
  |
3 | #[once(result = true)]
  | ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `once` (in Nightly builds, run with -Z macro-backtrace for more info)
